     (Kent Gibson)

   * User Guide enhanced with suggested readability improvements from
     Matt Revell and corrections from John Arbash Meinel. (Ian Clatworthy)

   * Quick Start Guide renamed to Quick Start Card, moved down in
     the catalog, provided in png format and updated to refer to ``send``
     instead of ``bundle``. (Ian Clatworthy, #165080)

  INTERNALS:

    * New -Dhttp debug option reports http connections, requests and responses.
      (Vincent Ladeuil)

    * New -Dmerge debug option, which emits merge plans for merge-type=weave.

  BUGFIXES:

   * Better error message when running ``bzr cat`` on a non-existant branch.
     (Lukáš Lalinský, #133782)

   * Catch OSError 17 (file exists) in final phase of tree transform and show
     filename to user.
     (Alexander Belchenko, #111758)

   * Catch ShortReadvErrors while using pycurl. Also make readv more robust by
     allowing multiple GET requests to be issued if too many ranges are
     required.
     (Vincent Ladeuil, #172701)

   * Check for missing basis texts when fetching from packs to packs.
     (John Arbash Meinel, #165290)

   * Fall back to showing e-mail in ``log --short/--line`` if the committer/author has
     only e-mail. (Lukáš Lalinský, #157026)

  API BREAKS:

   * Deprecate not passing a ``location`` argument to commit reporters'
     ``started`` methods. (Matt Nordhoff)


bzr 1.0rc1 2007-11-30
=====================

  NOTES WHEN UPGRADING:

   * The default repository format is now ``pack-0.92``.  This 
     default is used when creating new repositories with ``init`` and 
     ``init-repo``, and when branching over bzr+ssh or bzr+hpss. 
     (See https://bugs.launchpad.net/bugs/164626)

     This format can be read and written by Bazaar 0.92 and later, and 
     data can be transferred to and from older formats.

     To upgrade, please reconcile your repository (``bzr reconcile``), and then
     upgrade (``bzr upgrade``). 
     