@@ -90,10 +90,7 @@ Appendices
 ##########
 
 .. include:: specifying_revisions.txt
-.. include:: conflicts.txt
-.. include:: configuration.txt
 .. include:: setting_up_email.txt
-.. include:: authentication_conf.txt
 .. include:: http_smart_server.txt
 .. include:: writing_a_plugin.txt
 
