@@ -64,7 +64,7 @@ def _get_body(params):
     return "\n".join(result)
 
 
-def _get_section(registry, section, title, hdg_level1="=", hdg_level2="-"):
+def _get_section(registry, section, title, hdg_level1="#", hdg_level2="="):
     """Build the manual part from topics matching that section."""
     topics = sorted(registry.get_topics_for_section(section))
     lines = [title, hdg_level1 * len(title), ""]
@@ -86,7 +86,8 @@ def _get_section(registry, section, title, hdg_level1="=", hdg_level2="-"):
         help = registry.get_detail(topic)
         heading,text = help.split("\n", 1)
         lines.append(heading)
-        lines.append(hdg_level2 * len(heading))
+        if not text.startswith(hdg_level2):
+            lines.append(hdg_level2 * len(heading))
         lines.append(text)
         lines.append('')
         # check that topic match heading
@@ -100,8 +101,8 @@ def _get_section(registry, section, title, hdg_level1="=", hdg_level2="-"):
     return "\n" + "\n".join(lines) + "\n"
 
 
-def _get_commands_section(registry, title="Commands", hdg_level1="=",
-                          hdg_level2="-"):
+def _get_commands_section(registry, title="Commands", hdg_level1="#",
+                          hdg_level2="="):
     """Build the comands reference section of the manual."""
     lines = [title, hdg_level1 * len(title), ""]
     cmds = sorted(bzrlib.commands.builtin_command_names())
@@ -132,19 +133,19 @@ rstx_preamble = """.. This file is autogenerated from the output of
 
 
 rstx_head = """\
-=====================
+#####################
 Bazaar User Reference
-=====================
+#####################
 
 :Version:   %(version)s
 :Generated: %(datestamp)s
 
-.. contents::
+.. contents:: :depth: 2
 
 -----
 
 About This Manual
-=================
+#################
 
 This manual is generated from Bazaar's online help. To use
 the online help system, try the following commands.
