@@ -29,12 +29,19 @@ IN DEVELOPMENT
      the catalog, provided in png format and updated to refer to ``send``
      instead of ``bundle``. (Ian Clatworthy, #165080)
 
+   * Reference material has now be moved out of the User Guide and added
+     to the User Reference. The User Reference has gained 4 sections as
+     a result: Authenication Settings, Configuration Settings, Conflicts
+     and Hooks. (Ian Clatworthy)
+
   INTERNALS:
 
     * New -Dhttp debug option reports http connections, requests and responses.
       (Vincent Ladeuil)
 
     * New -Dmerge debug option, which emits merge plans for merge-type=weave.
+
+    * Help topics can now be loaded from files. (Ian Clatworthy)
 
   BUGFIXES:
 
